# Robotics-AI-IIOT-Showcase

./: .dockerignore  .gitattributes  .gitignore  .snyk  .trivyignore  AGENTS.md  DEVELOPER.md  README.md  docker-compose.observability.yaml  mkdocs.yml  opencode.json  pyproject.toml  start_solution.py
.agent/: access-permissions.json  tasks.json  workflow.md
.agent/general/: coding.md  communication.md  error-handling.md  warmstart.md
.agent/knowledge/: architecture.md  decisions.md  domain.md  glossary.md
.agent/local/: deployment.md  file-access.md  logging.md  ui-ux.md
.agent/roles/: .index.md  developer.md  orchestrator.md  qa.md  reviewer.md
.agent/skills/clean-build/: skill.md
.agent/skills/clean-build/scripts/: clean-build.py
.agent/skills/md-cleansing/: skill.md
.agent/skills/python-fmt/: skill.md
.github/: codeql.yml  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  security-scan.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/jaeger/: jaeger-simplified.yaml
docs/: DEVELOPER.md  IMPLEMENTATION_STATUS.md
infra/terraform/: main.tf  outputs.tf  variables.tf
monitoring/: grafana-dashboard.json  prometheus.yml
proto/: analytics.proto  edge.proto  telemetry.proto
read-me/: ReadMe.md  UI-UX-Guidelines.md
scripts/: benchmark-api.py  benchmark-ws.py  generate-docs.py  run-tests.py  setup-dev.ps1  setup-dev.sh  smoke-test.py
src/: .dockerignore  .env.template  Caddyfile  ReadMe.md  docker-compose.yaml
src/ai-agent/: Dockerfile  pyproject.toml  requirements.txt
src/ai-agent/app/: agent.py  llm.py  main.py  prompt.md  router.py  telemetry.py  tools.py  tracing.py
src/ai-agent/tests/: test_agent.py
src/ai-service/: Dockerfile  ReadMe.md  pyproject.toml  requirements.txt
src/ai-service/app/: consumer.py  inference.py  main.py  tracing.py
src/ai-service/tests/: test_inference.py
src/core-platform/: .dockerignore  Dockerfile  Doxyfile  ReadMe.md  entrypoint.sh
src/core-platform/cpp/: CMakeLists.txt
src/core-platform/cpp/compilation-resources/: measures.json
src/core-platform/cpp/include/core_platform/: event_logger.hpp  rules.hpp  snapshot.hpp  time_utils.hpp  types.hpp  utils.hpp
src/core-platform/cpp/include/core_platform/nodes/: assembly_line_node.hpp  camera_node.hpp  humanoid_node.hpp  maintenance_node.hpp  safety_node.hpp  sensor_node.hpp
src/core-platform/cpp/include/core_platform/sensors/: current_sensor.hpp  distance_sensor.hpp  humidity_sensor.hpp  pressure_sensor.hpp  sensor.hpp  sensor.tpp  temperature_sensor.hpp  torque_sensor.hpp  vibration_sensor.hpp
src/core-platform/cpp/include/core_platform/units/: unit.hpp  unit_registry.hpp
src/core-platform/cpp/scripts/: codegen-measures.py
src/core-platform/cpp/src/: current_sensor.cpp  distance_sensor.cpp  humidity_sensor.cpp  main.cpp  pressure_sensor.cpp  rules.cpp  snapshot.cpp  temperature_sensor.cpp  time_utils.cpp  torque_sensor.cpp  types.cpp  unit.cpp  unit_registry.cpp  vibration_sensor.cpp
src/core-platform/cpp/src/nodes/: assembly_line_node.cpp  camera_node.cpp  humanoid_node.cpp  maintenance_node.cpp  safety_node.cpp  sensor_node.cpp
src/core-platform/cpp/tests/: CMakeLists.txt  test_maintenance_node.cpp  test_rules.cpp  test_safety_node.cpp  test_sensor_node.cpp
src/core-platform/scripts/: publish_to_redis.py
src/edge-sim/: Dockerfile  pyproject.toml
src/edge-sim/app/: main.py  sensors.py
src/edge-sim/tests/: conftest.py  test_sensors.py
src/envs/ai-agent/: .env.template
src/envs/ai-service/: .env.template
src/envs/core-platform/: .env.template
src/envs/integration-service/: .env.template
src/envs/ops-api/: .env.template
src/envs/ops-frontend/: .env.template
src/helm/integration-service/: Chart.yaml  values.yaml
src/integration-service/: Dockerfile  pyproject.toml
src/integration-service/app/: db.py  deps.py  event_consumer.py  main.py  metrics.py  models.py  schemas.py  sync_engine.py
src/integration-service/app/adapters/: base.py  mqtt.py  opcua.py  registry.py  rest.py  sap_odata.py  soap.py
src/integration-service/app/routes/: integrations.py
src/integration-service/app/utils/: crypto.py
src/integration-service/tests/: conftest.py  test_adapters.py  test_routes.py  test_sync_engine.py
src/ops-api/: Dockerfile  ReadMe.md  alembic.ini  init_db.py  pyproject.toml  requirements.txt
src/ops-api/alembic/: env.py
src/ops-api/alembic/versions/: 001_initial_multi_tenant_schema.py
src/ops-api/app/: analytics_engine.py  audit_logger.py  auth.py  consumer.py  db.py  deps.py  event_bus.py  main.py  reconciliation.py  site_manager.py  store.py  tracing.py  webhook_engine.py  webhook_v2.py
src/ops-api/app/middleware/: rate_limit.py  security_headers.py
src/ops-api/app/routes/: analytics.py  audit.py  auth.py  commands.py  integration_proxy.py  inventory.py  metrics.py  reconcile.py  reports.py  robots.py  sensors.py  shifts.py  sites.py  telemetry.py  webhooks.py
src/ops-api/tests/: test_routes.py  test_store.py
src/ops-frontend/: .dockerignore  Dockerfile  ReadMe.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
src/ops-frontend/e2e/: dashboard.spec.ts
src/ops-frontend/src/: App.css  App.tsx  jsx.d.ts
src/ops-frontend/src-tauri/: Cargo.toml  tauri.conf.json
src/ros2/: CMakeLists.txt  Dockerfile  build.sh  entrypoint.sh
src/ros2/src/factory_gazebo/: CMakeLists.txt  package.xml
src/ros2/src/factory_gazebo/launch/: factory_simulation.launch.py
src/ros2/src/factory_gazebo/worlds/: factory_floor.world
src/ros2/src/humanoid_robot/: CMakeLists.txt  package.xml
src/ros2/src/humanoid_robot/launch/: spawn_humanoid.launch.py
src/ros2/src/humanoid_robot/urdf/: humanoid.xacro
src/ros2/src/ros2_bridge/: package.xml  setup.py
src/ros2/src/ros2_bridge/ros2_bridge/: bridge_node.py
src/shared/: ReadMe.md  pyproject.toml
src/shared/schemas/: events.py  telemetry.py
src/shared/tests/: test_schemas.py
(+91 files in other folders)
