[project]
name = "integration-service"
version = "0.1.0"
description = "Integration Service — manages connections to external systems (ERP, CRM, factory APIs)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
    "redis>=5.2.0",
    "prometheus-client>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

