[project]
name = "showcase-ops-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "showcase-shared",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.2.0",
    "pydantic>=2.0",
    "websockets>=12.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "reportlab>=4.1.0",
    "prometheus-client>=0.20.0",
]

[tool.uv.sources]
showcase-shared = { path = "../shared" }
[dependency-groups]
dev = ["pytest>=8.0"]
