<?xml version="1.0"?>
<package format="3">
  <name>factory_gazebo</name>
  <version>1.0.0</version>
  <description>Factory floor Gazebo world and simulation launcher</description>
  <maintainer email="dev@factory.showcase">Developer</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
