<?xml version="1.0"?>
<package format="3">
  <name>humanoid_robot</name>
  <version>1.0.0</version>
  <description>Humanoid robot URDF and Gazebo spawn configuration</description>
  <maintainer email="dev@factory.showcase">Developer</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
