<?xml version="1.0"?>
<package format="3">
  <name>ros2_bridge</name>
  <version>1.0.0</version>
  <description>Bridges Gazebo robot poses to ops-api telemetry via Redis</description>
  <maintainer email="dev@factory.showcase">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>redis</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
